Fixed all issues except overflow in small window size, scrooling for image part is added while making top part static but dcouldn't solve the issue.

--- a/client/src/components/Panel.css
+++ b/client/src/components/Panel.css
@@ -201,6 +201,8 @@
 .background-icon-list {
 	display: flex;
 	justify-content: center;
+	width:100%;
+	overflow-x: scroll;
 }
 
 .sound-category-list {
